# AI_Enviromental_Game

./: .gitignore  README.md  README_MEJORAS_ENTRENAMIENTO.md  SOLUCION_COMPLETA_ENTRENAMIENTO.md  SOLUCION_FINAL_MOVIMIENTO_VERTICAL.md  SOLUCION_MOVIMIENTO_VERTICAL.md  air_hockey_env.py  analyze_fixed_model.py  analyze_fixed_model_direct.py  check_models.py  constants.py  debug_model_actions.py  dqn_agent.py  fix_scaling.py  fix_vertical_movement.py  generate_results_plots.py  generate_system_diagram.py  improved_training_system.py  improved_training_system_fixed.py  improved_training_system_v2.py  main.py  main_improved.py  main_with_gym.py  pyproject.toml  quick_analysis.py  quick_diagnosis.py  quick_train_model.py  requirements.txt  setup.py  setup_improved_training.py  sprite_loader.py  sprites.py  table.py  test_goal_scaling copy.py  test_integration.py  train_agent.py  training.py  training_analysis.py  utils.py
.cursor/rules/: basicusage.mdc  gamecontext.mdc
analysis_results_20250529_214454/: analysis_metrics.json  episode_data.csv
compare_models/: quick_analysis.py  training_analysis.py
game/: main.py  main_hub.py
game/pages/: home.py  (+1 more)
improved_logs/: evaluations.npz
info/: README_MEJORAS_ENTRENAMIENTO.md
logs/: evaluations.npz
pages/: home.py
tests/: check_models.py  debug_model_actions.py  quick_diagnosis.py  test_level_integration.py
training_Systems/: fix_vertical_movement.py  improved_training_system.py  improved_training_system_v2.py  quick_train_model.py  train_agent.py  training_system_hard.py
utils/: __init__.py  drawing.py  vector.py
(+12 files in other folders)
