[project]
name = "ai-enviromental-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "seaborn>=0.13.2",
    "stable-baselines3[extra]>=2.6.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
]
